# Compressor

./: CMakeLists.txt
res/: imagem.h
src/: estruturas.hpp  imagem.h  imagem.hpp  main.cpp
